[gd_scene load_steps=9 format=3 uid="uid://b11bxbk7iya5e"]

[ext_resource type="Script" uid="uid://csbasmn0fupg1" path="res://cenas/jogador.gd" id="1_06a7y"]
[ext_resource type="Texture2D" uid="uid://cj5288q88uto6" path="res://Assets Space Invades/Sprites/jugador.png" id="2_w41yl"]
[ext_resource type="AudioStream" uid="uid://cvcvpq3m3k0sp" path="res://Assets Space Invades/sfx/shoot.wav" id="3_w41yl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b30p5"]
size = Vector2(15, 5.98123)

[sub_resource type="Animation" id="Animation_b6i3o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_3g2vg"]
resource_name = "destruido"
length = 0.7
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ax54i"]
resource_name = "vivo"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_epdo5"]
_data = {
&"RESET": SubResource("Animation_b6i3o"),
&"destruido": SubResource("Animation_3g2vg"),
&"vivo": SubResource("Animation_ax54i")
}

[node name="jogador" type="CharacterBody2D" groups=["tanque"]]
script = ExtResource("1_06a7y")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_w41yl")
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_b30p5")

[node name="pontoDoLaser" type="Marker2D" parent="."]
position = Vector2(0, -4)

[node name="timerDisparo" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_epdo5")
}
autoplay = "vivo"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_w41yl")

[connection signal="timeout" from="timerDisparo" to="." method="_on_timer_disparo_timeout"]
